<resources>
    <string name="app_name">Dolphin |MMJR2|</string>
    <string name="host">app</string>
    <string name="scheme">dolphinemu</string>
    <string name="controller_0">GameCube Controller 1</string>
    <string name="controller_1">GameCube Controller 2</string>
    <string name="controller_2">GameCube Controller 3</string>
    <string name="controller_3">GameCube Controller 4</string>
    <string name="controller_control">Control Stick</string>
    <string name="controller_c">C Stick</string>
    <string name="controller_trig">Triggers</string>
    <string name="controller_dpad">D-Pad</string>
    <string name="modifier_range">Modifier Range</string>
    <string name="analog_radius">Analog Radius (High value = High sensitivity)</string>
    <string name="analog_threshold">Analog Threshold (Low value = High sensitivity)</string>
    <string name="wiimote_4">Wii Remote 1</string>
    <string name="wiimote_5">Wii Remote 2</string>
    <string name="wiimote_6">Wii Remote 3</string>
    <string name="wiimote_7">Wii Remote 4</string>
    <string name="wiimote_extension_4">Wii Remote Extension 1</string>
    <string name="wiimote_extension_5">Wii Remote Extension 2</string>
    <string name="wiimote_extension_6">Wii Remote Extension 3</string>
    <string name="wiimote_extension_7">Wii Remote Extension 4</string>
    <string name="wiimote_extensions">Extension</string>
    <string name="wiimote_extensions_description">Choose and bind the Wii Remote extension.</string>
    <string name="wiimote_ir">IR</string>
    <string name="wiimote_swing">Swing</string>
    <string name="wiimote_tilt">Tilt</string>
    <string name="wiimote_shake">Shake</string>
    <string name="input_binding">Input Binding</string>
    <string name="input_binding_description">Press or move an input to bind it to %1$s.</string>
    <string name="input_rumble_description">Press or move any input to set rumble.</string>
    <string name="generic_buttons">Buttons</string>
    <string name="generic_up">Up</string>
    <string name="generic_down">Down</string>
    <string name="generic_left">Left</string>
    <string name="generic_right">Right</string>
    <string name="generic_forward">Forward</string>
    <string name="generic_backward">Backward</string>
    <string name="generic_stick">Stick</string>
    <string name="generic_green">Green</string>
    <string name="generic_red">Red</string>
    <string name="generic_yellow">Yellow</string>
    <string name="generic_blue">Blue</string>
    <string name="generic_orange">Orange</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_start">START</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="trigger_left">L</string>
    <string name="trigger_right">R</string>
    <string name="trigger_left_analog">L Analog</string>
    <string name="trigger_right_analog">R Analog</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_home">HOME</string>
    <string name="ir_hide">Hide</string>
    <string name="tilt_modifier">Modifier</string>
    <string name="shake_x">X</string>
    <string name="shake_y">Y</string>
    <string name="shake_z">Z</string>
    <string name="nunchuk_button_c">C</string>
    <string name="classic_button_zl">ZL</string>
    <string name="classic_button_zr">ZR</string>
    <string name="classic_leftstick">Left Stick</string>
    <string name="classic_rightstick">Right Stick</string>
    <string name="guitar_frets">Frets</string>
    <string name="guitar_strum">Strum</string>
    <string name="guitar_whammy">Whammy</string>
    <string name="guitar_whammy_bar">Bar</string>
    <string name="drums_pads">Pads</string>
    <string name="drums_pad_bass">Bass</string>
    <string name="turntable_button_green_left">Green Left</string>
    <string name="turntable_button_red_left">Red Left</string>
    <string name="turntable_button_blue_left">Blue Left</string>
    <string name="turntable_button_green_right">Green Right</string>
    <string name="turntable_button_red_right">Red Right</string>
    <string name="turntable_button_blue_right">Blue Right</string>
    <string name="turntable_button_euphoria">Euphoria</string>
    <string name="turntable_table_left">Table Left</string>
    <string name="turntable_table_right">Table Right</string>
    <string name="turntable_effect">Effect</string>
    <string name="turntable_effect_dial">Dial</string>
    <string name="turntable_crossfade">Crossfade</string>
    <string name="settings">Settings</string>
    <string name="game_settings">Game Settings: %1$s</string>
    <string name="config">Config</string>
    <string name="graphics_settings">Graphics Settings</string>
    <string name="gcpad_settings">GameCube Input</string>
    <string name="wiimote_settings">Wii Input</string>
    <string name="settings_saved">Saved settings to INI files</string>
    <string name="settings_saved_game_specific">Saved settings for %1$s</string>
    <string name="general_submenu">General</string>
    <string name="dual_core">Dual Core</string>
    <string name="dual_core_description">Split workload to two CPU cores instead of one. Increases speed.</string>
    <string name="enable_cheats">Enable Cheats</string>
    <string name="speed_limit">Speed Limit (0% = Unlimited)</string>
    <string name="skip_on_skip_idle">Sync GPU on Skip Idle Hack</string>
    <string name="skip_on_skip_idle_description">Sync the emulated CPU with the GPU when skipping idle cycles. Disabling this is mostly safe, but might cause weird bugs or crash since CPU and GPU are not always synchronized. To avoid audio crackling, be sure to disable Audio Stretching.</string>
    <string name="jit_follow_branch">JIT Follow Branch</string>
    <string name="jit_follow_branch_description">Let the emulated CPU follow certain branch instructions. Disabling this is mostly safe, but might cause weird bugs or crash.</string>
    <string name="overclock_warning">WARNING: Changing this from the default (100%) WILL break games and cause glitches. Please do not report bugs that occur with a non-default clock.</string>
    <string name="gamecube_submenu">GameCube</string>
    <string name="system_language">System Language</string>
    <string name="skip_ipl">Skip IPL</string>
    <string name="skip_ipl_description">Skip BIOS</string>
    <string name="slot_a_device">GameCube Slot A Device</string>
    <string name="slot_b_device">GameCube Slot B Device</string>
    <string name="wii_submenu">Wii</string>
    <string name="wii_widescreen">Widescreen</string>
    <string name="wii_widescreen_description">Changes aspect ratio from 4:3 to 16:9 in games that support it.</string>
    <string name="wii_pal60">Use PAL60 Mode (EuRGB60)</string>
    <string name="wii_pal60_description">Changes refresh rate from 50 Hz to 60 Hz in PAL games that support it.</string>
    <string name="wii_screensaver">Enable Screen Saver</string>
    <string name="wii_screensaver_description">Dims the screen after five minutes of inactivity.</string>
    <string name="sound_mode">Sound</string>
    <string name="insert_sd_card">Insert SD Card</string>
    <string name="insert_sd_card_description">Supports SD and SDHC. Default size is 128 MB.</string>
    <string name="wii_sd_card_allow_writes">Allow Writes to SD Card</string>
    <string name="wiimote_rumble">Wii Remote Rumble</string>
    <string name="wiimote_volume">Wii Remote Speaker Volume</string>
    <string name="sensor_bar_sensitivity">Sensor Bar Sensitivity</string>
    <string name="sensor_bar_position">Sensor Bar Position</string>
    <string name="wiimote_scanning">Wii Remote Continuous Scanning</string>
    <string name="wiimote_scanning_description">Leave this on if you are using a DolphinBar for real Wii Remote support.</string>
    <string name="wiimote_speaker">Wii Remote Speaker</string>
    <string name="wiimote_speaker_description">Enable sound output through the speaker on a real Wii Remote (DolphinBar required).</string>
    <string name="override_region_settings">Allow Mismatched Region Settings</string>
    <string name="auto_disc_change">Change Discs Automatically</string>
    <string name="fallback_region">Fallback Region</string>
    <string name="enable_save_states">Enable Savestates</string>
    <string name="enable_save_states_description">WARNING: Savestates may not be compatible with future versions of Dolphin and can make it impossible to create normal saves in some cases. Never use savestates as the only way of saving your progress.</string>
    <string name="lock_emulation_landscape">Lock screen to landscape</string>
    <string name="lock_emulation_landscape_desc">Some touch controls will require additional tweaking if played in portrait</string>
    <string name="analytics">Enable usage statistics reporting</string>
    <string name="analytics_desc">If authorized, Dolphin can collect data on its performance, feature usage, and configuration, as well as data on your system\'s hardware and operating system.\n\nNo private data is ever collected. This data helps us understand how people and emulated games use Dolphin and prioritize our efforts. It also helps us identify rare configurations that are causing bugs, performance and stability issues. This authorization can be revoked at any time through Dolphin\'s settings.</string>
    <string name="analytics_new_id">Generate a New Statistics Identity</string>
    <string name="analytics_new_id_confirmation">Are you sure you want to generate a new statistics identity?</string>
    <string name="gametdb_thanks">Special thanks to Weihuoya + Dolphin Team for getting this emulator to where it is today.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="grid_menu_graphics_settings">Graphics Settings</string>
    <string name="grid_menu_gcpad_settings">GameCube Input</string>
    <string name="grid_menu_wiimote_settings">Wii Input</string>
    <string name="grid_menu_refresh">Refresh Library</string>
    <string name="grid_menu_open_file">Open File</string>
    <string name="grid_menu_install_wad">Install WAD</string>
    <string name="properties_details">Details</string>
    <string name="properties_start_with_riivolution">Start with Riivolution Patches</string>
	<string name="properties_convert">Convert File</string>
    <string name="properties_edit_game_settings">Custom Game Settings</string>
    <string name="properties_clear_game_settings">Clear Game Settings</string>
    <string name="pause_emulation">Pause Emulation</string>
    <string name="unpause_emulation">Unpause Emulation</string>
    <string name="emulation_screenshot">Take Screenshot</string>
    <string name="emulation_savestate">Save State</string>
    <string name="emulation_loadstate">Load State</string>
    <string name="emulation_exit">Exit Emulation</string>
    <string name="emulation_quicksave">Quick Save</string>
    <string name="emulation_quickload">Quick Load</string>
    <string name="emulation_refresh_wiimotes">Refresh Wii Remotes</string>
    <string name="emulation_overlay_controls">Overlay Controls</string>
    <string name="emulation_quick_settings">Quick Settings</string>
    <string name="emulation_change_disc">Change Disc</string>
    <string name="properties_clear_game_data">Clear Game Cache</string>
    <string name="grid_menu_open_updater">MMJR2 Updater</string>
    <string name="cheats">Cheat Codes</string>
    <string name="cheats_name">Name</string>
    <string name="cheats_creator">Creator</string>
    <string name="cheats_notes">Notes</string>
    <string name="cheats_code">Code</string>
    <string name="cheats_edit">Edit</string>
    <string name="cheats_delete">Delete</string>
</resources>