<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings_core"
        android:title="@string/grid_menu_config"
        android:icon="@drawable/ic_settings_core"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/grid_menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings_graphics"
        android:icon="@drawable/ic_settings_graphics"
        android:title="@string/grid_menu_graphics_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings_gcpad"
        android:icon="@drawable/ic_settings_gcpad"
        android:title="@string/grid_menu_gcpad_settings"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings_wiimote"
        android:icon="@drawable/ic_settings_wiimote"
        android:title="@string/grid_menu_wiimote_settings"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_file"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/grid_menu_open_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_install_wad"
        android:title="@string/grid_menu_install_wad"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_changelog"
        android:title="@string/changelog_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/updater_dialog"
        android:title="@string/grid_menu_open_updater"
        app:showAsAction="never"/>

</menu>
