<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dolphin_background">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="center"
        tools:src="@drawable/no_banner" />

    <View
        android:id="@+id/center_line"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_medium"
        android:orientation="vertical"
        android:layout_below="@id/banner"
        android:padding="@dimen/spacing_medium"
        android:showDividers="middle">

        <Button
            android:id="@+id/custom_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameprop_button_height"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:stateListAnimator="@null"
            android:text="@string/properties_edit_game_settings"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_medium"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/properties_details"
                android:layout_width="0dp"
                android:layout_height="@dimen/gameprop_button_height"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/properties_details"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/properties_edit_cheats"
                android:layout_width="0dp"
                android:layout_height="@dimen/gameprop_button_height"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/cheats"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_medium"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/button_wiimote_settings"
                android:layout_width="0dp"
                android:layout_height="@dimen/gameprop_button_height"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/grid_menu_wiimote_settings"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button_gcpad_settings"
                android:layout_width="0dp"
                android:layout_height="@dimen/gameprop_button_height"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/grid_menu_gcpad_settings"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_medium"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/menu_clear_data"
                android:layout_width="0dp"
                android:layout_height="@dimen/gameprop_button_height"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/properties_clear_game_data"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/properties_clear_settings"
                android:layout_width="0dp"
                android:layout_height="@dimen/gameprop_button_height"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/properties_clear_game_settings"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

        </LinearLayout>

        <Button
            android:id="@+id/properties_convert"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameprop_button_height"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:stateListAnimator="@null"
            android:text="@string/properties_convert"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:iconTint="@color/amoled_primary_dark" />

        <Button
            android:id="@+id/properties_start_with_riivolution"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameprop_button_height"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:stateListAnimator="@null"
            android:text="@string/properties_start_with_riivolution"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/properties_system_update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameprop_button_height"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:stateListAnimator="@null"
            android:text="@string/properties_system_update"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:iconTint="@color/amoled_accent" />

    </LinearLayout>

</RelativeLayout>
